DTIS und Quantization

--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -1,13 +1,13 @@
 \documentclass{scrartcl}
 
+% Standard Header für Zusammenfassungen verwenden.
 \input{header/zusammenfassung}
 
 \setDefaultArrayStretch{2}
 
-
-
+% Titel und Autor
 \title{DigSig1 Formelsammlung}
-\subtitle{Dozent: G.Schuster, Buch: }
+\subtitle{Dozent: G.Schuster, Buch: Introduction to Signal Processing, Orfanidis}
 \author{Jürg Rast}
 
 
@@ -16,12 +16,9 @@
 	\maketitle
 	\thispagestyle{empty}
 \end{titlepage}
-
-
 \newpage
 
 \tableofcontents
-
 \newpage
 
 \input{sections/RandomSignals}
@@ -31,7 +28,6 @@
 \input{sections/FIRFilteringConvolution}
 \input{sections/ZTransform}
 \input{sections/TransferFunctions}
-
 
 \end{document}
  
