--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -1,1 +1,20 @@
 \section{Transfer Functions}
+
+IIR-Form:
+\[ 
+	H(z) = \frac{N(z)}{D(z)}
+		= \frac{b_0 + b_1 z^{-1} + b_2 z^{-2} + \ldots + b_N z^{-N}}{1 + a_1 z^{-1} + a_2 z^{-2} + \ldots + a_M z^{-M} }
+\]
+
+if $D(z) = 1$, the IIR Form can be reduced to a FIR Filter:
+\[
+	H(z) = N(z) = b_0 + b_1 z^{-1} + b_2 z^{-2} + \ldots + b_N z^{-N}
+\]
+
+Example: find $H(z)$ for $h(n) = \left[1,3,4,5\right]$
+\[ H(z) = 1 + 3z^{-1} + 4z^{-2} + 5z^{-5}\]
+
+Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $
+\[
+	Y(z) = 0.25z^{-2}Y(z) + X(z)
+\]
