QuantisatonProcess Formel fuer B geandert

--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -5,7 +5,7 @@
 	\hline
 	$R$			& full-scale range		& $R = Q \cdot 2^B$
 	\\ \hline
-	$B$			& bits					& $B = log_2(\frac{Q}{R})$
+	$B$			& bits					& $B = log_2(\frac{R}{Q})$
 	\\ \hline
 	$Q$			& quantization width	& $Q = \frac{R}{2^B}$
 	\\ \hline
