close #2 aliasing beschrieben

--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -19,3 +19,11 @@ Sampling Theorem (Nyquist rate):
 \[ f_s \geq 2f_{max} \qquad \text{or} \qquad T \leq \frac{1}{2f_{max}} \]
 Nyquist interval:
 \[ \left[-\frac{f_s}{2}, \frac{f_s}{2}\right] \]
+\subsubsection{Aliasing}
+If the signal frequency $f$ is outside the nyquist interval, the signal will be
+aliased with $f - f_{sampling}$.\\
+\textbf{Example:} $sin(8\pi t)$ (signal frequency $f=4$) sampled at a rate of
+$f_s=5Hz$ will be aliased to $sin(2\pi (f-f_s) t) = sin(2\pi (-1) t)$\\
+
+Is the signal frequency $f$ inside the nyquist interval, no aliasing will be
+perceived.
