Linear time invariant systems description

--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -1,6 +1,9 @@
 \section{Discret-Time Systems\buch{Chapter 3}}
 \subsection{Linearity and time invariance}
-
+\begin{tabular}{ll}
+\textbf{Linearity:} & If $y(n) = x(n)$ then $y(2n)=2x(n)$\\
+\textbf{Time invariance:} & If $y(n) = x(n)$ then $y(n+\delta) = x(n+\delta)$\\
+\end{tabular}
 
 \subsection{Impulse response}
 \begin{tabular}{ll}
