--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -5,7 +5,7 @@
 	\hline
 	$R$			& full-scale range		& $R = Q \cdot 2^B$
 	\\ \hline
-	$B$			& bits					& $B = log_2(\frac{R}{Q})$
+	$B$			& bits					& $B = log_2 \left(\frac{R}{Q}\right)$
 	\\ \hline
 	$Q$			& quantization width	& $Q = \frac{R}{2^B}$
 	\\ \hline
@@ -13,7 +13,7 @@
 	\\ \hline
 	$e_{RMS}$	& root-mean-square error & $e_{RMS} = \frac{Q}{\sqrt{12}}$
 	\\ \hline
-	$SNR$		& signal-to-noise ratio	& $SNR = 20 log_{10}(\frac{R}{Q}) = 6B\, dB$
+	$SNR$		& signal-to-noise ratio	& $SNR = 20 log_{10}\left(\frac{R}{Q}\right) = 6B\, dB$
 	\\ \hline
 	$\sigma_e^2$& average power / variance & $\sigma_e^2 = E[e^2(n)] = \frac{Q^2}{12}$
 	\\ \hline
@@ -26,7 +26,7 @@
 	$L$	& oversampling ratio	& $L = \frac{f_s'}{f_s}$ with $f_s'$ as higher sampling rate
 	\\ \hline
 	$\Delta B$	& saved bits without noise shaping	& $\Delta B = 0.5 \cdot log_2(L)$ \\
-				& saved bits with noise shaping		& $\Delta B = (p + 0.5) \cdot log_2(L) - 0.5 \cdot log_2(\frac{\pi^{2p}}{2p + 1})$
+				& saved bits with noise shaping		& $\Delta B = (p + 0.5) \cdot log_2(L) - 0.5 \cdot log_2\left(\frac{\pi^{2p}}{2p + 1}\right)$
 	\\ \hline
 \end{tabular}
 
