causality and stability

--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -28,4 +28,14 @@
 \end{tabular}
 
 
-\subsection{Causality and stability}
+\subsection{Causality}
+\begin{tabular}{ll}
+	\textbf{causal} & right sided signals, they are non-zero for $n>=0$ \\
+	\textbf{anticausal} & left sided signals, they are non-zero for $n<=-1$ \\
+	\textbf{mixed signals} & double-sided signals \\
+\end{tabular}
+
+\subsection{Stability}
+\textbf{Stability Condition} $\sum\limits_{n=-\infty}^{\infty}\left| h(n)
+\right| < \infty$\\
+An LTI system is stable, if a bounded input can only generate bounded outputs.\\
