Convolution Table added. ugly.

--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -2,6 +2,7 @@
 
 % Standard Header für Zusammenfassungen verwenden.
 \input{header/zusammenfassung}
+\usepackage{tikz}
 
 \setDefaultArrayStretch{2}
 
