LTI form convolution table added

--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -52,6 +52,17 @@ $y=[y_0, y_1, y_2, y_3, y_4, y_5, y_6, y_7]$
 
 
 \subsubsection{LTI Form}
+\begin{tabular}{c|cccccccc|}
+	& $h_0$ & $h_1$ & $h_2$ & $h_3$ & 0 & 0 & 0 & 0 \\
+	\hline
+	$x_0$ & $x_0h_0$ & $x_0h_1$ & $x_0h_2$ & $x_0h_3$ & 0 & 0 & 0 & 0 \\
+	$x_1$ & 0 & $x_1h_0$ & $x_1h_1$ & $x_1h_2$ & $x_1h_3$ & 0 & 0 & 0 \\
+	$x_2$ & 0 & 0 & $x_2h_0$ & $x_2h_1$ & $x_2h_2$ & $x_2h_3$ & 0 & 0 \\
+	$x_3$ & 0 & 0 & 0 & $x_3h_0$ & $x_3h_1$ & $x_3h_2$ & $x_3h_3$ & 0 \\
+	$x_4$ & 0 & 0 & 0 & 0 & $x_4h_0$ & $x_4h_1$ & $x_4h_2$ & $x_4h_3$ \\
+	\hline
+	$y_n$ & $y_0$ & $y_1$ & $y_2$ & $y_3$ & $y_4$ & $y_5$ & $y_6$ & $y_7$ \\
+\end{tabular}
 \[
 	y(n) = \sum\limits_{m=max(0,n-M)}^{min(n,L-1)} x(m)h(n-m)
 \]
