--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -116,7 +116,59 @@ Example:
 
 
 \subsubsection{Flip-and-Slide Form}
+\begin{tikzpicture}
 
+\foreach \h in {0,...,3} {
+	\node at (3-\h,0) {$h_{\h}$};
+	\node at (10-\h,0) {$h_{\h}$};
+	\node at (15-\h,0) {$h_{\h}$};
+	
+};
+\foreach \x in {0,...,2} {
+	\node at (3+\x,-1) {$x_{\x}$};
+};
+\foreach \0 in {0,1,2,13,14,15} {
+	\node at (\0,-1) {0};
+};
+
+\node at (6,-1) {$\cdot\cdot\cdot$};
+\node at (7,-1) {$x_{n-3}$};
+\node at (8,-1) {$x_{n-2}$};
+\node at (9,-1) {$x_{n-1}$};
+\node at (10,-1) {$x_{n}$};
+\node at (11,-1) {$\cdot\cdot\cdot$};
+\node at (12,-1) {$x_{L-1}$};
+
+\draw (-0.3,0.3) rectangle (3.3,-0.3);
+\draw (6.3,0.3) rectangle (10.3,-0.3);
+\draw (11.3,0.3) rectangle (15.3,-0.3);
+\draw (2.5,-0.7) rectangle (12.5,-1.3);
+\draw [dashed] (-0.3,-1.3) rectangle (2.5,-0.7);
+\draw [dashed] (15.3,-1.3) rectangle (12.5,-0.7);
+
+\foreach \x in {0,1,2,3,7,8,9,10,12,13,14,15} {
+	\draw (\x,-0.3) -- (\x,-0.7);
+};
+
+\draw [->] (3.3,0) -- (6.3,0);
+\draw [->] (10.3,0) -- (11.3,0);
+\foreach \x in {3,10,15} {
+	\draw [->] (\x, -1.3) -- (\x,-1.7);
+};
+
+\node at (0,-1.5) [anchor=west] {M zeros};
+\node at (13,-1.5) [anchor=west] {M zeros};
+
+\node at (3,-2) {$y_0$};
+\node at (10,-2) {$y_n$};
+\node at (15,-2) {$y_{L-1+M}$};
+
+\end{tikzpicture}
+\[
+	y(n) = h_0x_n + h_1x_{n-1}+\cdot\cdot\cdot+h_Mx_{n-M}
+\]
+
+\subsubsection{Overlap-Add Form}
 
 \subsubsection{Transient and Steady-State Behavior}
 \begin{tabular}{|l|l|}
