--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -169,6 +169,29 @@ Example:
 \]
 
 \subsubsection{Overlap-Add Form}
+\begin{enumerate}
+  \item Divide input $x$ into smaller blocks $x_0, x_1, \ldots$ of length $L$.
+  If the input is not long enough for a last complete block, the last block is
+  filled up with zeroes
+  \item Calculate the output of the convolution of block $x_0$ with $h$,
+  resulting in $y_0$
+  \item Repeat step 2 for all blocks, resulting in $y_1, y_2, \ldots$
+  \item Add $y_0, y_1, \ldots$ up using the following table. $y_{n+1}$ is always
+  moved to the right with an offset of $L$ compared to $y_n$.
+\end{enumerate}
+
+\begin{tabular}{c|ccccccccccc}
+	n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
+	\hline
+	$y_0$ & $y_{0,0}$ & $y_{0,1}$ & $y_{0,2}$ & $y_{0,3}$ & $y_{0,4}$ & $y_{0,5}$ &
+	& & & &\\
+	$y_1$ & & & & $y_{1,0}$ & $y_{1,1}$ & $y_{1,2}$ & $y_{1,3}$ & $y_{1,4}$ &
+	$y_{1,5}$ & & \\
+	$y_2$ & & & & & & & $y_{2,0}$ & $y_{2,1}$ & $y_{2,2}$ & $y_{2,3}$ & $y_{2,4}$
+	\\
+	\hline
+\end{tabular}
+
 
 \subsubsection{Transient and Steady-State Behavior}
 \begin{tabular}{|l|l|}
