--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -9,7 +9,7 @@
 % Titel und Autor
 \title{DigSig1 Formelsammlung}
 \subtitle{Dozent: G.Schuster, Buch: Introduction to Signal Processing, Orfanidis}
-\author{Jürg Rast}
+\author{Jürg Rast, Gian Claudio Köppel}
 
 
 \begin{document}
