FIRFilteringConvolution.tex: subsubsection Convolution ergaenzt

--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -1,7 +1,13 @@
 \section{FIR Filtering and Convolution\buch{Chapter 4}}
 \subsection{Block Processing Methods}
 \subsubsection{Convolution}
-
+\begin{tabular}{|l|l|l|}
+	\hline
+	$y(n)$		& direct and LTI forms of convolution	& $y(n)=\sum\limits_m h(m)x(n-m)=\sum\limits_m x(m)h(n-m)$
+	\\ \hline
+	$y(n)$		& convolution table form				& $y(n)=\sum\limits_{\substack{i,j \\ i+j=n}} h(i)x(j)$
+	\\ \hline
+\end{tabular}
 
 \subsubsection{Direct Form}
 \begin{tabular}{|l|l|}
