--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -2,7 +2,9 @@
 \subsection{Linearity and time invariance}
 \begin{tabular}{ll}
 \textbf{Linearity:} & If $y(n) = x(n)$ then $y(2n)=2x(n)$\\
+testing: & $y(n)=[x_1(n) + x_2(n)] = y_1(n) + y_2(n)$\\
 \textbf{Time invariance:} & If $y(n) = x(n)$ then $y(n+\delta) = x(n+\delta)$\\
+testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 \end{tabular}
 
 \subsection{Impulse response}
