--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -19,6 +19,9 @@ Sampling Theorem (Nyquist rate):
 \[ f_s \geq 2f_{max} \qquad \text{or} \qquad T \leq \frac{1}{2f_{max}} \]
 Nyquist interval:
 \[ \left[-\frac{f_s}{2}, \frac{f_s}{2}\right] \]
+
+The Spectrum ${X}(f)$ of the sampled signal will be replicated
+\[ \hat{X}(f) = \frac{1}{T} \sum_{m=-\infty}^{\infty}X(f-m f_s)\]
 \subsubsection{Aliasing}
 If the signal frequency $f$ is outside the nyquist interval, the signal will be
 aliased with $f - f_{sampling}$.\\
@@ -27,3 +30,9 @@ $f_s=5Hz$ will be aliased to $sin(2\pi (f-f_s) t) = sin(2\pi (-1) t)$\\
 
 Is the signal frequency $f$ inside the nyquist interval, no aliasing will be
 perceived.
+
+The stop frequency form the Antialiasing Prefilter is define as:
+\[ f_{stop} = f_s - f_{pass} \]
+The attemtuation of the Antialiasing Prefilter is:
+
+\[ A(f) = -20 \cdot \log_{10}{|\frac{H(f)}{H(f_0)}|} \]
