Random Signals, power spectrum -jwk

--- a/sections/RandomSignals.tex
+++ b/sections/RandomSignals.tex
@@ -22,6 +22,6 @@
 	$R_{XX}(k) = E[x(n+k)x(n)]$
 	\\ \hline
 	power spectrum & 
-	$S_{XX}(\omega) = \sum\limits_{k=-\infty}^{\infty} R_{XX}(k)e^{j\omega k} \qquad \omega = \frac{2\pi f}{f_s} $
+	$S_{XX}(\omega) = \sum\limits_{k=-\infty}^{\infty} R_{XX}(k)e^{-j\omega k} \qquad \omega = \frac{2\pi f}{f_s} $
 	\\ \hline
 \end{tabularx}
