--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -42,8 +42,8 @@ $f_s=5Hz$ will be aliased to $sin(2\pi (f-f_s) t) = sin(2\pi (-1) t)$\\
 Is the signal frequency $f$ inside the nyquist interval, no aliasing will be
 perceived.
 
-The stop frequency form the Antialiasing Prefilter is define as:
+The stop frequency from the Antialiasing Prefilter is defined as:
 \[ f_{stop} = f_s - f_{pass} \]
-The attemtuation of the Antialiasing Prefilter is:
+The attenuation of the Antialiasing Prefilter is:
 
 \[ A(f) = -20 \cdot \log_{10}{\left|\frac{H(f)}{H(f_0)}\right|} \]
