use tabularx instead of tabular for more equal tables

--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -15,7 +15,7 @@ testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 
 
 \subsection{FIR and IIR filters}
-\begin{tabular}{|l|l|l|}
+\begin{tabularx}{0.75\textwidth}{|l|X|X|}
 	\hline
 	$M$	& filter order				& 
 	\\ \hline
@@ -27,7 +27,7 @@ testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 	\\ \hline
 	IIR		& IIR filtering equation	& $y(n) = \sum\limits_{m=0}^{\infty} h(m)x(n-m)$
 	\\ \hline
-\end{tabular}
+\end{tabularx}
 
 
 \subsection{Causality}
