quantization: added dynamic range formula

--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -13,6 +13,8 @@
 	\\ \hline
 	$e_{RMS}$	& root-mean-square error & $e_{RMS} = \frac{Q}{\sqrt{12}}$
 	\\ \hline
+	$r$	        & dynamic range         & $r = 20 log_{10}\left(2^B\right) \approx 6dB \cdot B$
+	\\ \hline
 	$SNR$		& signal-to-noise ratio	& $SNR = 20 log_{10}\left(\frac{R}{Q}\right) = 6B\, dB$
 	\\ \hline
 	$\sigma_e^2$& average power / variance & $\sigma_e^2 = E[e^2(n)] = \frac{Q^2}{12}$
