--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -39,12 +39,12 @@ Performance of oversampling noise shaping quantizers:
 	\hline
 	$p$	& $L$							& 4		& 8		& 16	& 32	& 64	& 128
 	\\ \hline
-	0	& $\Delta B =0.5 \cdot log_2(L)$		& 1.0	& 1.5	& 2.0	& 2.5	& 3.0	& 3.5 \\
-	1	& $\Delta B =1.5 \cdot log_2(L) - 0.86$ & 2.1	& 3.6	& 5.1	& 6.6	& 8.1	& 9.6 \\
-	2	& $\Delta B =2.5 \cdot log_2(L) - 2.14$	& 2.9	& 5.4	& 7.9	& 10.4	& 12.9	& 15.4 \\
-	3	& $\Delta B =3.5 \cdot log_2(L) - 3.55$	& 3.5	& 7.0	& 10.5	& 14.0	& 17.5	& 21.0 \\
-	4	& $\Delta B =4.5 \cdot log_2(L) - 5.02$	& 4.0	& 8.5	& 13.0	& 17.5	& 22.0	& 26.5 \\
-	5	& $\Delta B =5.5 \cdot log_2(L) - 6.53$	& 4.5	& 10.0	& 15.5	& 21.0	& 26.5	& 32.0 \\
+	0	& $\Delta B \approx 0.5 \cdot log_2(L)$		& 1.0	& 1.5	& 2.0	& 2.5	& 3.0	& 3.5 \\
+	1	& $\Delta B \approx 1.5 \cdot log_2(L) - 0.86$ & 2.1	& 3.6	& 5.1	& 6.6	& 8.1	& 9.6 \\
+	2	& $\Delta B \approx 2.5 \cdot log_2(L) - 2.14$	& 2.9	& 5.4	& 7.9	& 10.4	& 12.9	& 15.4 \\
+	3	& $\Delta B \approx 3.5 \cdot log_2(L) - 3.55$	& 3.5	& 7.0	& 10.5	& 14.0	& 17.5	& 21.0 \\
+	4	& $\Delta B \approx 4.5 \cdot log_2(L) - 5.02$	& 4.0	& 8.5	& 13.0	& 17.5	& 22.0	& 26.5 \\
+	5	& $\Delta B \approx 5.5 \cdot log_2(L) - 6.53$	& 4.5	& 10.0	& 15.5	& 21.0	& 26.5	& 32.0 \\
 	\hline
 \end{tabularx}
 \resetArrayStretch
