--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -1,4 +1,4 @@
-\section{Transfer Functions}
+\section{Transfer Functions\buch{Chapter 6}}
 
 IIR-Form:
 \[ 
@@ -18,3 +18,87 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $
 \[
 	Y(z) = 0.25z^{-2}Y(z) + X(z)
 \]
+
+\subsection{Steady state response}
+\[\cos(\omega_0 n) \rightarrow \left|H(\omega_0) \right| \cos(\omega_0 n + \arg(H(\omega_0))) \]
+
+\[\sin(\omega_0 n) \rightarrow \left|H(\omega_0) \right| \sin(\omega_0 n + \arg(H(\omega_0))) \]
+
+\begin{tabularx}{0.6\textwidth}{|l|X|}
+	\hline
+	phase delay & $d(\omega) = - \frac{\arg(H(\omega))}{\omega}$\ \qquad $\arg H(\omega = -\omega d(\omega))$
+	\\ \hline 
+	group delay & $d_g(\omega) = -\frac{d}{d\omega}(\arg(H(\omega)))$	
+	\\ \hline
+\end{tabularx}\\ \\
+
+\subsection{Transient Response}
+\begin{tabularx}{1\textwidth}{l X}
+	complex sinuousness: & $x(n) = e^{j \omega_0 n} \Rightarrow X(Z) = \frac{1}{1-e^{j \omega_0 n} z^{-1}} $
+	\\ 
+	effective time: & $n_{eff} = \frac{\ln \epsilon}{\ln \rho}$ \qquad with \qquad \
+	$\rho = \max\lim\limits_{i}\left|p_i \right|$
+	\\ 
+	$\left| 1-a e^{-j\omega}\right| = \sqrt{1-2a\cos(\omega) + a^2}$
+\end{tabularx}\\ \\
+
+\subsection{Unit Step Response}
+\begin{tabularx}{1\textwidth}{l X}
+	DC-Gain: & $H(0) = H(z)|_{z=1}= \sum\limits_{n=0}^{\infty}h(n) $
+	\\
+	AC-Gain: & $H(\pi) = H(z)|_{z=-1}= \sum\limits_{n=0}^{\infty}(-1)^n h(n) $
+\end{tabularx}\\ \\
+
+
+\subsection{Pole/Zero Design}
+\begin{tabularx}{1\textwidth}{l X}
+	3dB width & $\Delta\omega \simeq 2(1-R)$ \qquad $=:R$ is the pole
+\end{tabularx}\\ \\
+
+\textbf{2 pole conjugate filter}
+
+\begin{tabularx}{1\textwidth}{l X}
+	poles: & $ p = R e^{j\omega}$ \qquad and \qquad $ p^* = R e^{-j\omega}$
+	\\ 
+	Transfer function: & $H(z)= \frac{G}{(1-R e^{-j\omega}z^{-1})(1-Re^{j\omega}z^{-1})}$\
+	$=\frac{G}{1+a_1z^{-1}+a_2z^{-2}}$
+	\\
+	& $h(n) = \frac{G}{\sin(\omega_0)}R^n \sin(\omega_0 n + \omega_0)$
+	\\ 
+	Parameter: & $a_1 = -2R\cos(\omega_0)$ \qquad; \qquad $a_2 = R^2$
+	\\ 
+	& $G = (1-R)\sqrt{1-2R\cos(2\omega_0)+ R^2}$
+\end{tabularx}\\ \\
+
+\textbf{2 pole 2 zero filter}
+
+\begin{tabularx}{1\textwidth}{l X}
+	poles: & $ p = R e^{j\omega}$ \qquad and \qquad $ p^* = R e^{-j\omega}$
+	\\ 
+	zeros: & $ z_1 = r e^{j\omega}$ \qquad and \qquad $ z_1^* = r e^{-j\omega}$
+	\\
+	Transfer function: & $H(z)= \frac{(1-r e^{j\omega}z^{-1})(1-re^{-j\omega}z^{-1})}{(1-R e^{j\omega}z^{-1})(1-Re^{-j\omega}z^{-1})}$\
+	$=\frac{1+b_1z^{-1}+b_2z^{-2}}{1+a_1z^{-1}+a_2z^{-2}}$
+	\\ 
+	Parameter: & $a_1 = -2R\cos(\omega_0)$ \qquad; \qquad $a_2 = R^2$
+	\\ 
+	& $b_1 = -2r\cos(\omega_0)$ \qquad; \qquad $b_2 = r^2$
+\end{tabularx}\\ \\
+
+\textbf{Notch and Comb Filter}
+\\
+The zeros of the filters located on the unit circle and the poles are in the unit
+circle.
+
+\begin{tabularx}{1\textwidth}{l X}
+	Transfer function: & $H(z) = \frac{N(z)}{D(z)} $
+	\\
+	& $N(z) = \prod\limits_{i=1}^{M}(1- e^{j\omega_i}z^{-1)} $ \qquad (notch polynomial)
+	\\
+	& $D(z) = N(\rho^{-1})  = \prod\limits_{i=1}^{M}(1- e^{j\omega_i}\rho z^{-1)} $
+	\\
+	& $H(z)) = \frac{1+b_1 z^{-1} + b_2z^{-2} + \ldots + b_M z^{-M}}
+	{1+\rho b_1 z^{-1} + \rho^2 b_2z^{-2} + \ldots + \rho^M b_M z^{-M}} $
+	
+\end{tabularx}\\ \\
+
