notch and comb filter: typo fix

--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -97,7 +97,7 @@ circle.
 	\\
 	& $D(z) = N(\rho^{-1})  = \prod\limits_{i=1}^{M}(1- e^{j\omega_i}\rho z^{-1)} $
 	\\
-	& $H(z)) = \frac{1+b_1 z^{-1} + b_2z^{-2} + \ldots + b_M z^{-M}}
+	& $H(z) = \frac{1+b_1 z^{-1} + b_2z^{-2} + \ldots + b_M z^{-M}}
 	{1+\rho b_1 z^{-1} + \rho^2 b_2z^{-2} + \ldots + \rho^M b_M z^{-M}} $
 	
 \end{tabularx}\\ \\
