FIR: added reference to geometric series

--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -250,8 +250,4 @@ Therefore, the direct form takes the following different forms:
 		\right.
 \]
 
-
-
-
-	
-	
+See also \ref{geometricseries} \nameref{geometricseries}
