--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -27,6 +27,7 @@
 	\{ z \in \mathbb{C} \quad | \quad X(z) = \sum\limits_{n=-\infty}^{\infty} x(n)z^{-n} \neq \pm \infty \}
 \]
 
+\label{geometricseries}
 \begin{tabularx}{0.6\textwidth}{|l|X|}
 	\hline
 	infinite geometric series 1 & $1 + x + x^2 + x^3 + \ldots = \sum\limits_{n=0}^{\infty} x^n = \frac{1}{1-x}$
