ztrans: fixed sign error

--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -77,9 +77,9 @@ Some Z-Transforms: \\ \\
 	\hline
 	$-(-1)^n u(-n-1)$ & $\frac{1}{1 + z^{-1}}$ & $|z|<1$ \\
 	\hline
-	$a^n u(n)$ & $\frac{1}{1 + az^{-1}}$ & $|z|>a$ \\
+	$a^n u(n)$ & $\frac{1}{1 - az^{-1}}$ & $|z|>a$ \\
 	\hline
-	$-a^n u(-n-1)$ & $\frac{1}{1 + az^{-1}}$ & $|z|<a$ \\
+	$-a^n u(-n-1)$ & $\frac{1}{1 - az^{-1}}$ & $|z|<a$ \\
 	\hline
 \end{tabularx}\\ \\
 
