Fehler in Z-Tabelle korrigiert

--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -73,7 +73,7 @@ Some Z-Transforms: \\ \\
 	\hline
 	$-u(-n-1)$ & $\frac{1}{1 - z^{-1}}$ & $|z|<1$ \\
 	\hline
-	$-(-1)^n u(n)$ & $\frac{1}{1 + z^{-1}}$ & $|z|>1$ \\
+	$(-1)^n u(n)$ & $\frac{1}{1 + z^{-1}}$ & $|z|>1$ \\
 	\hline
 	$-(-1)^n u(-n-1)$ & $\frac{1}{1 + z^{-1}}$ & $|z|<1$ \\
 	\hline
