Fehler bei der Transverfunktion korrigiert

--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -37,7 +37,7 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $
 	complex sinuousness: & $x(n) = e^{j \omega_0 n} \Rightarrow X(Z) = \frac{1}{1-e^{j \omega_0 n} z^{-1}} $
 	\\ 
 	effective time: & $n_{eff} = \frac{\ln \epsilon}{\ln \rho}$ \qquad with \qquad \
-	$\rho = \max\lim\limits_{i}\left|p_i \right|$
+	$\rho = \max\limits_{i}\left|p_i \right|$
 	\\ 
 	$\left| 1-a e^{-j\omega}\right| = \sqrt{1-2a\cos(\omega) + a^2}$
 \end{tabularx}\\ \\
